--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "oauth-passport",
-  "version": "1.0.0",
-  "description": "OAuth-Passport",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Dmytro9/OAuth-Passport.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Dmytro9/OAuth-Passport/issues"
-  },
-  "homepage": "https://github.com/Dmytro9/OAuth-Passport#readme",
-  "dependencies": {
-    "ejs": "^2.6.2",
-    "express": "^4.17.1"
-  }
+	"name": "oauth-passport",
+	"version": "1.0.0",
+	"description": "OAuth-Passport",
+	"main": "app.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Dmytro9/OAuth-Passport.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Dmytro9/OAuth-Passport/issues"
+	},
+	"homepage": "https://github.com/Dmytro9/OAuth-Passport#readme",
+	"dependencies": {
+		"ejs": "^2.6.2",
+		"express": "^4.17.1"
+	},
+	"devDependencies": {
+		"eslint": "^6.1.0",
+		"eslint-config-airbnb-base": "^13.2.0",
+		"eslint-config-node": "^4.0.0",
+		"eslint-config-prettier": "^6.0.0",
+		"eslint-plugin-node": "^9.1.0",
+		"eslint-plugin-prettier": "^3.1.0",
+		"prettier": "^1.18.2"
+	}
 }
