--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 	"homepage": "https://github.com/Dmytro9/OAuth-Passport#readme",
 	"dependencies": {
 		"ejs": "^2.6.2",
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"passport": "^0.4.0",
+		"passport-google-oauth20": "^2.0.0"
 	},
 	"devDependencies": {
 		"eslint": "^6.1.0",
