--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
 		"no-process-exit": "off",
 		"object-shorthand": "off",
 		"class-methods-use-this": "off",
-		"strict": "off"
+		"strict": "off",
+		"node/no-unpublished-require": "warn"
 	}
 }
