--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
 	},
 	"homepage": "https://github.com/Dmytro9/OAuth-Passport#readme",
 	"dependencies": {
+		"cookie-session": "^1.3.3",
 		"ejs": "^2.6.2",
 		"express": "^4.17.1",
+		"mongoose": "^5.6.6",
 		"passport": "^0.4.0",
 		"passport-google-oauth20": "^2.0.0"
 	},
